test: Arrays.asList -> List.of 변경